WIP - Kickoff Java 10 support on Gradle (#139)